@@ -1,4 +1,5 @@
 
+  * Added composer and comment to the dynamic playlists options
   * Added dragndrop support to Album Browser. You can drag the tracks or
     with control the cover to another album
   * Added comments, composer and disk number
